<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

  <TextView
      android:id="@+id/txtLogIn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/txt_log_in"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/viewEmail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="64dp"
      android:layout_marginEnd="32dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtLogIn">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/et_email_hint" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/viewPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="32dp"
      app:passwordToggleEnabled="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/viewEmail">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/et_password_hint" />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/btnRegister"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="32dp"
      android:onClick="onRegister"
      android:paddingLeft="20dp"
      android:paddingTop="6dp"
      android:paddingRight="20dp"
      android:paddingBottom="6dp"
      android:text="@string/btnRegister"
      android:textSize="16sp"
      app:cornerRadius="30dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/btnLogin"
      app:layout_constraintTop_toBottomOf="@+id/viewPassword" />

  <Button
      android:id="@+id/btnLogin"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="16dp"
      android:onClick="onLogin"
      android:paddingLeft="20dp"
      android:paddingTop="6dp"
      android:paddingRight="20dp"
      android:paddingBottom="6dp"
      android:text="@string/btnLogIn"
      android:textSize="16sp"
      app:cornerRadius="30dp"
      app:layout_constraintBaseline_toBaselineOf="@+id/btnRegister"
      app:layout_constraintEnd_toStartOf="@+id/btnRegister"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>